<resources>
    <string name="app_name">AdCafé</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createAccountText">"Create Account."</string>
    <string name="dontHaveAccountQuestion">"Don't have an account? Sign up here!"</string>
    <string name="haveAccountQuestion">"Have an account already? Log in here!"</string>
    <string name="signUpText">"Sign up."</string>
    <string name="signInText">"Login."</string>
    <string name="passwordHintText">"Password."</string>
    <string name="confirmPasswordText">"Confirm Password."</string>
    <string name="emailText">"Email (you@example.com)."</string>
    <string name="nameText">"Name."</string>
    <string name="title_activity_login">"Login."</string>
    <string name="reloadButton">"Reload"</string>
    <string name="LogInNoConnection">"You may need internet connection to login."</string>
    <string name="SignUpNoConnection">"You may need internet connection to sign up."</string>
    <string name="connectionDropped">"Hmmm, your connection may have a problem."</string>
    <string name="connectionDropped2">"Your connection may have a few problems."</string>
    <string name="connectToInternet">"You need an internet connection to continue…"</string>
    <string name="noInternetForLoadAds">You need an internet connection to load the ads.</string>
    <string name="shared">"Shared."</string>
    <string name="connectionBack">"Your back online, you may now continue."</string>
    <string name="Logout">"Logout"</string>
    <string name="pinning">"Pinning."</string>
    <string name="learnSE">"Learn. Share. Earn."</string>
    <string name="lastAd">"This may be the last ad."</string>
    <string name="dashInfo">"This is where all the stats concerning ads you've seen and money you can claim is stored."</string>
    <string name="cannotPin">"You cannot pin this without an internet connection"</string>
    <string name="pinningSuccess">"Successfully pinned!"</string>
    <string name="pinningFailure">"Pinning may have failed."</string>
    <string name="hasBeenPinned">"You already pinned that."</string>
    <string name="unpinned">"Unpinned."</string>
    <string name="failedUnpinned">"We're unable to unpin that right now."</string>
    <string name="cannotUploadFailedFirebase">"Your connection may be low,try again after a few moments."</string>
    <string name="UploadAdNoConnection">"You may need internet connection to Upload your Advert."</string>
    <string name="DoNotPayTwice">"Note that once you pay, you can upload your advert at any time."</string>
    <string name="MakeSureImage">"Images are compressed to save on our database space. "</string>
    <string name="pleaseChooseIcon">"Please choose an image fist."</string>
    <string name="successfullyUploaded">"Thanks for using the AdCafé to advertise your product."</string>
    <string name="monitorProcess">FYI: You\'re able to monitor the progress of your ads from the dashboard.(By clicking the Big Button Marked "FIND OUT")</string>
    <string name="unsuccessfullyUploaded">"Something went wrong,try uploading again after a few minutes."</string>
    <string name="uploadMessage">"Upload may take some time..."</string>
    <string name="settingUpMessage">"Setting a couple of things up..."</string>
    <string name="settingUpMessage2">"Setting a few things up..."</string>
    <string name="settingUpAccountMessage">"Setting up your account..."</string>
    <string name="loadingTodaysAdsmessage">"Loading today's ads..."</string>
    <string name="loadingYourPinnedAds">"Loading your pinned ads"</string>
    <string name="failedToLoadTodaysAds">"Failed to load today's ads."</string>
    <string name="noteForPickingMessage">"The number shown is by 1000 (*1000 users). Select having that in mind."</string>
    <string name="pickBeforePaying">"So make sure you pick before making any payments."</string>
    <string name="shareText">"Share App for awesomeness."</string>
    <string name="confirmMessage">"We've just sent you a confirmation email. Head over to your inbox to verify and activate your account(Worry not, its only a one time thing)."</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slider1text">It\'s basically an app for advertising information, products and all
    types of services to users in the app from across the country. </string>
    <string name="slider1title">Tap, View And Go</string>
    <string name="slider2title">AdCafé</string>
    <string name="slider2text">Basically you can charge advertisers for your time to view their ads in the app and also
        advertise your product to the app\'s users.</string>
    <string name="slider2hello">Hello!</string>
    <string name="slider2take">Take a Tour</string>
    <string name="slide3text21">We want to make advertising cool; We believe that the adCafe can do just that, and do it in a way that is
        effective, interesting and maybe, just maybe, entertaining.</string>
    <string name="slide3text2">Your attention has value to advertisers. Here you can charge them for it, making money in the process.</string>
    <string name="slide4text">Even better! Among many other benefits, the AdCafe gives you the ability to
        target many of its users in a very short period of time.</string>
    <string name="slide5text">Not quite yet! First you\'ll need to know how to use the app and for that we\'ve prepared
        a short tutorial on how you will interact with it.</string>
    <string name="slide6text">Now the main page will look something like this.
        Don\'t worry, we will go over what everything is and what everything does.</string>
    <string name="slide7text">The advert banners will be hosted in cards looking like this. The centre to top part is where the banner will
        be.</string>
    <string name="slide8text">Below the banner are some buttons which should help you to perform some actions on the ad.</string>
    <string name="slide9text">At the top of the page are two items, a timer (to the left) and an AdCounter (to the right).</string>
    <string name="timerExplanation">The timer counts down 7 seconds. During this period you cannot move to the next ad, but only
        after the timer hits 0. Remember that.</string>
    <string name="adcounterExplanation">The AdCounter simply shows you the number of adverts you\'ve seen in the day.</string>
    <string name="slide10text">Below the AdCards are buttons which can help you do more cool stuff.</string>
    <string name="logoutbuttonexplanation">Logout Button : You can logout of your account using this button.</string>
    <string name="pinlisticon">Ad Archive Button : This will open a window where you can view all your pinned ads.</string>
    <string name="dashboardexplanation">Dashboard Button : This window is where all the stats concerning the number of ads you\'ve
        see are stored.</string>
    <string name="shareappexplanation">Share App Button : This will help you share the app with your friends and mates. Feel free to
        do so!</string>
    <string name="slide11text">Share! and if you have any questions comments or
        suggestions, contact us through feedback (in the dashboard);
        lets turn this into something big!</string>
    <string name="slide12text">No it is optional, meaning you do not have to engage in it if you don\'t want to.</string>
    <string name="slide13text">Its quite simple really. Essentially you will be monetised based on (and in proportion to) the
        number of ads you see.</string>
    <string name="Advertiserslide1text">Advertising in the AdCafe is one of the simplest and most convenient way to
        advertise, as it has many benefits that help you promote your product.</string>
    <string name="Advertiserslide2text">Essentially, we only advertise by views. When our user sees a banner for 7 seconds,
        we consider advertising to have taken place.</string>
    <string name="Advertiserslide2text2">Also, advertising here happens in 24h cycles; Meaning, when you upload an ad today, it will
        only be showcased on the day after.</string>
    <string name="reachabilityexplanation">Advertising here gives you the ability to reach the apps users within a very short period of time.</string>
    <string name="targetingExplanation">Here you can target the type of users you want to reach based on
         the general category of product you deal with.</string>
    <string name="affordablilityexplanation">Advertising here is affordable and flexible as per your financial ability. The price,
        however, is dependent on the price your targeted users charge for their time.</string>
    <string name="reimbursabilityexplanation">In the event your ad doesn\'t reach your targeted number of users,
        you can take back the remaining amount through the Ad Stats Window.</string>
    <string name="monitorableexplanation">Through the Ad Stats Window(Dashboard->Ad Stats), you can find
        out in real time how many users have seen your ad and the amount to be reimbursed.</string>
    <string name="advertisePageExplaation">The page is designed similar to the main page. This basically will give you a feel of how the
        banner will look in real time.</string>
    <string name="advertisebuttonstext">Below the mock card are a few buttons which will help you select and upload your ad.</string>
    <string name="selectimagebutton">Select Image button : This button will help you choose an image from your gallery.</string>
    <string name="selectnumber">Select Number of People button : This is for choosing the number of people you want to reach.</string>
    <string name="addlinkbutton">Add link button : (Optional) You can ad a link to a relevant website for your advert.</string>
    <string name="uploadbutton">Upload button : After setting everything, clicking this button will prompt you for your credit/debit card
        details then after processing the payment, the upload will be carried out.</string>
    <string name="dontuploadsameadtwice">We have a strict policy concerning re-uploading ads. Uploading the same ad more than once is not
        allowed here.</string>
    <string name="contactus">Feel free to contact us if you have any questions or inquiries for us. We will try our best to reply as soon
        as possible.</string>
    <string name="noteAboutChoosingAmmount">Note: The higher the amount chosen, the lower the number of banners you might see. So we recommend 3 Ksh
        per view.</string>
    <string name="changecpvexplanation">Press continue if you wish to change the amount you charge for each banner you see.</string>
    <string name="noteAboutChoosingAmmount2">Remember: The higher the amount chosen, the lower the number of banners you might see. So we recommend 3 Ksh
        per view.</string>
    <string name="shareText2">Hey, check out this cool new app called The AdCafé.</string>
    <string name="changeTimeExplanation">Click continue if you wish to change the time you are notified daily about new ads.</string>
    <string name="needToMakePayments">Next you need to make a payment before the upload.
        We only support credit/debit card payments as of now.</string>
    <string name="needUserDetails">We also need a few more details from you before we can continue.</string>
    <string name="tutorialExplanationAdvertiser6.2">The cost of advertising here depends on the amount charged by
        the group of users you are targeting. For instance, some users charge 3Ksh per view.</string>
    <string name="tutorialExplanationAdvertiser6.3">So if you were to target the 3Ksh users, you would pay 5250Ksh per 1000 users reached
        &#13;&#10; i.e   3Ksh + 2Ksh per user reached, plus 5% on the total amount paid (for transaction fees).</string>
</resources>