<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:background="@drawable/bottombuttonsfocus"
            android:layout_height="140dp" />

        <TextView
            android:id="@+id/textView1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="Bottom Buttons."
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/slide10text"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp">

            <ImageButton
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_action_exit"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:paddingRight="5dp"
                android:text="@string/logoutbuttonexplanation"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp">

            <ImageButton
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_action_pinn_list_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:paddingRight="5dp"
                android:text="@string/pinlisticon"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp">

            <ImageButton
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_action_dashboard"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:paddingRight="5dp"
                android:text="@string/dashboardexplanation"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp">

            <ImageButton
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_action_share"/>
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:paddingRight="5dp"
                android:text="@string/shareappexplanation"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>