<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:background="@drawable/topbarfocus"
            android:layout_height="190dp" />

        <TextView
            android:id="@+id/textView1"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="Top Bar Items."
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/slide9text"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:paddingRight="5dp"
                android:text="@string/timerExplanation"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:paddingRight="5dp"
                android:text="@string/adcounterExplanation"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>