<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="The Benefits."
            android:layout_marginBottom="20dp"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="Reachability."
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textView2"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="@string/reachabilityexplanation"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="Targeting."
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textView2.5"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="@string/targetingExplanation"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="Affordability."
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textView3"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="@string/affordablilityexplanation"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="Reimbursability."
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textView4"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="@string/reimbursabilityexplanation"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="Monitor ad progress."
                android:textSize="18sp" />
            <TextView
                android:id="@+id/textView5"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_height="wrap_content"
                android:text="@string/monitorableexplanation"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>